--- a/content/post/intro-2019-05.md
+++ b/content/post/intro-2019-05.md
@@ -11,7 +11,7 @@ tags:
     - howto
     - netdevops
 URL: "/2019/05/06/getting_started"
-categories: [ "General" ]
+categories: [ "Nautomation" ]
 custom_css: ["css/custom_header.css"]
 ---
 
